<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/backgroundLight"
    android:layout_width="match_parent"
    android:paddingTop="@dimen/_19sdp"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/backBtn"
        style="@style/Widget.App.Button.Image"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:padding="0dp"
        app:icon="@drawable/arrow_left"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="@dimen/_24sdp"
        app:iconTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/create_a_new_account"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@+id/backBtn"
        app:layout_constraintStart_toEndOf="@+id/backBtn"
        app:layout_constraintTop_toTopOf="@+id/backBtn" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:fontFamily="@font/cairo_semi_bold"
        android:text="@string/having_profile_photo_helps_people"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backBtn" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        android:layout_width="@dimen/_95sdp"
        android:layout_height="@dimen/_95sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:src="@drawable/pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <ImageView
        android:layout_width="@dimen/_31sdp"
        android:layout_height="@dimen/_31sdp"
        android:src="@drawable/edit_pic"
        app:layout_constraintBottom_toBottomOf="@+id/profileImage"
        app:layout_constraintEnd_toEndOf="@+id/profileImage" />

    <Button
        android:id="@+id/uploadBtn"
        style="@style/Widget.App.Button.Disable"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_37sdp"
        android:layout_margin="@dimen/_16sdp"
        android:enabled="false"
        android:text="@string/upload_photo"
        app:layout_constraintBottom_toTopOf="@id/skipBtn"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/cairo_semi_bold"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/skipBtn"
        style="@style/Widget.App.Button.Text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_37sdp"
        android:layout_margin="@dimen/_16sdp"
        android:enabled="false"
        android:text="@string/skip"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/cairo_bold"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
