<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLight">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/choose_register_bg" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@color/backgroundDark" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/find_your_dream_home"
        android:textColor="@color/white"
        android:textSize="@dimen/_24ssp"
        app:layout_constraintBottom_toTopOf="@id/secondTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/secondTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_50sdp"
        android:layout_marginBottom="@dimen/_45sdp"
        android:fontFamily="@font/cairo_semi_bold"
        android:text="@string/seamlessly_browse_listings_and_book_your_next_property_in_minutes"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toTopOf="@id/btnPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnPhone"
        style="@style/Widget.App.Button.white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_37sdp"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:layout_marginBottom="@dimen/_6sdp"
        android:text="@string/continue_with_phone"
        app:backgroundTint="@null"
        app:icon="@drawable/ic_phone"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/_6sdp"
        app:iconSize="24dp"
        app:iconTint="@null"
        app:layout_constraintBottom_toTopOf="@id/btnEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnEmail"
        style="@style/Widget.App.Button.outline"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_37sdp"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:layout_marginBottom="@dimen/_6sdp"
        android:text="@string/continue_with_email"
        app:backgroundTint="@null"
        app:icon="@drawable/ic_email"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/_6sdp"
        app:iconSize="24dp"
        app:iconTint="@null"
        app:layout_constraintBottom_toTopOf="@id/btnGuest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnGuest"
        style="@style/Widget.App.Button.outline"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_37sdp"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:layout_marginBottom="@dimen/_6sdp"
        android:text="@string/continue_as_guest"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@id/signupText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.yousefh.rezone.view.SignupClickableTextView
        android:id="@+id/signupText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:layout_marginBottom="@dimen/_32sdp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/cairo_regular"
        android:padding="@dimen/_6sdp"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toTopOf="@id/termsAndPrivacy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.yousefh.rezone.view.TermsPrivacyTextView
        android:id="@+id/termsAndPrivacy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_24sdp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/cairo_regular"
        android:padding="@dimen/_6sdp"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
