<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLight"
    android:paddingTop="@dimen/_19sdp">

    <Button
        android:id="@+id/backBtn"
        style="@style/Widget.App.Button.Image"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:padding="0dp"
        app:icon="@drawable/arrow_left"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="@dimen/_24sdp"
        app:iconTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/forget_password"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@+id/backBtn"
        app:layout_constraintStart_toEndOf="@+id/backBtn"
        app:layout_constraintTop_toTopOf="@+id/backBtn" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/enter_otp_we_sent_to"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backBtn" />

    <TextView
        android:id="@+id/phoneTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/phone"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <com.chaos.view.PinView
        android:id="@+id/pinView"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:cursorVisible="true"
        android:inputType="text"
        android:itemBackground="@color/white"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:cursorColor="@color/colorPrimary"
        app:cursorWidth="@dimen/_1sdp"
        app:hideLineWhenFilled="true"
        app:itemCount="4"
        app:itemHeight="@dimen/_56sdp"
        app:itemRadius="4dp"
        app:itemSpacing="@dimen/_12sdp"
        app:itemWidth="@dimen/_56sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneTxt"
        app:lineColor="@color/textFieldOutline"
        app:lineWidth="@dimen/_1sdp"
        app:viewType="rectangle" />

    <com.yousefh.rezone.view.ResendCodeTextView
        android:id="@+id/resendText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/cairo_regular"
        android:padding="@dimen/_6sdp"
        app:layout_constraintTop_toBottomOf="@id/pinView"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submitBtn"
        style="@style/Widget.App.Button.Disable"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_37sdp"
        android:layout_margin="@dimen/_16sdp"
        android:enabled="false"
        android:fontFamily="@font/cairo_semi_bold"
        android:text="@string/submit"
        android:textSize="@dimen/_12ssp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
